fix: scrollbar is obscured

--- a/src/design/index.less
+++ b/src/design/index.less
@@ -23,8 +23,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: visible;
-  overflow-x: hidden;
+  overflow: hidden;
 
   &.color-weak {
     filter: invert(80%);
